--- a/om-fail.cabal
+++ b/om-fail.cabal
@@ -6,7 +6,7 @@ version:             0.1.0.0
 synopsis:            Monad transformer providing MonadFail.
 -- description:         
 homepage:            https://github.com/owensmurray/om-fail
-license:             AllRightsReserved
+license:             MIT
 license-file:        LICENSE
 author:              Rick Owens
 maintainer:          rick@owensmurray.com
