--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -91,10 +91,11 @@ jobs:
           (cat << EOF
           packages: .
           constraints:
-            base == 4.13,
+            base == 4.15.1.0,
             monad-logger == 0.3.36,
             safe-exceptions == 0.1.7.1,
             transformers == 0.5.6.2
+          EOF
           ) > cabal.project
           rm cabal.project.freeze
           cabal configure --enable-tests --disable-optimization
